Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue(text)
        Test(v)
    end

    action Test(Number var)
    end
end
